fix vertical alignment of element containers as label for checkbox/radio buttons

--- a/src/components/Checkbox/checkbox.scss
+++ b/src/components/Checkbox/checkbox.scss
@@ -66,12 +66,8 @@ $switch-checked-background-color-disabled: rgba($switch-checked-background-color
     }
 }
 
-.#{$ns}-control-indicator + * {
-    // Probably not necessary anymore but we let it here for reference
-    //margin-top: -1 * $eccgui-size-typo-text * $eccgui-size-typo-text-lineheight;
-}
-
-.#{$ns}-control-indicator + .#{$eccgui}-typography__overflowtext,
-.#{$ns}-control-indicator + * .#{$eccgui}-typography__overflowtext {
-    vertical-align: baseline;
+.#{$ns}-control-indicator + *,
+.#{$ns}-control-indicator + .#{$eccgui}-typography__overflowtext {
+    display: inline-block;
+    vertical-align: text-top;
 }
